--- a/index.html
+++ b/index.html
@@ -372,6 +372,11 @@
                             <td class="project-name"><a class="nombre__proyecto" href="https://jfonseca122.github.io/JuegoSecreto/">Juego Secreto</a></td>
                             <td class="project-date">27/06/2024</td>
                         </tr>
+                        <tr>
+                            <td><img src="./aseet/Letra_P.jpg" alt="Imagen del proyecto" class="project-image"></td>
+                            <td class="project-name"><a class="nombre__proyecto" href="https://pandablog-pied.vercel.app/">PandaBlog</a></td>
+                            <td class="project-date">26/09/2024</td>
+                        </tr>
                         <!-- Repite esta fila por cada proyecto -->
                     </table>
                     
